--- a/src/main/resources/templates/nutri/result.html
+++ b/src/main/resources/templates/nutri/result.html
@@ -13,95 +13,78 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <title>검색 결과</title>
 </head>
-<!DOCTYPE html>
-<html lang="kr">
-<!-- START : header -->
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" th:href="@{/css/nutri_result.css}" />
-  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <title>검색 결과</title>
-</head>
 
 <body>
 
-  <body>
-    <div class="location">
-      <span class="ar">home</span>
-      <span class="ar"> > </span>
-      <span class="ar">영양제 검색</span>
-      <span class="ar"> > </span>
-      <span>검색결과</span>
-    </div>
-
-    <div id="nutri_main">
-      <h1>
-        <label for="" id="main_title">영양제 검색 결과</label>
-      </h1>
-      <!-- START THE FEATURETTES -->
-      <div class="nutri-result">
-        <div class="text_context">
-          <div class="grid-contents">
-            <div class="text_area grid-item1" th:each="nutri : ${nutris}">
-              <div class="raw">
-                <div class="cal">
-                  <div class="cal-v">
-                    <div class="p_img">
-                      <img src="/src/main/resources/static/img/nutri.jpg" id="product"
-                        th:onclick="'location.href=\'/nutri/about?keyword=\' + ${nutri.name}'" />
+  <div class="location">
+    <span class="ar">home</span>
+    <span class="ar"> > </span>
+    <span class="ar">영양제 검색</span>
+    <span class="ar"> > </span>
+    <span>검색결과</span>
+  </div>
+	
+  <div id="nutri_main">
+    <h1>
+      <label for="" id="main_title">영양제 검색 결과</label>
+    </h1>
+    <!-- START THE FEATURETTES -->
+    <div class="nutri-result">
+      <div class="text_context">
+        <div class="grid-contents">
+          <div class="text_area grid-item1" th:each="nutri : ${nutris}">
+            <div class="raw">
+              <div class="cal">
+                <div class="cal-v">
+                  <div class="p_img">
+                    <img src="/src/main/resources/static/img/nutri.jpg" id="product"
+                      th:onclick="'location.href=\'/nutri/about?keyword=\' + ${nutri.name}'" />
+                  </div>
+                  <div class="p_content">
+                    <div th:text="${nutri.name}">
+                      고려은단 비타민C 1000
+                      <button class="heart-button" aria-label="Heart Button">
+                        <i class="fas fa-heart"></i>
+                      </button>
                     </div>
-                    <div class="p_content">
-                      <div th:text="${nutri.name}">
-                        고려은단 비타민C 1000
-                        <button class="heart-button" aria-label="Heart Button">
-                          <i class="fas fa-heart"></i>
-                        </button>
-                      </div>
-                      <div class="labels">
-                        <label for="nutri_contens">구분:
-                          <span th:text="${nutri.category}">비타민C</span>
-                        </label>
+                    <div class="labels">
+                      <label for="nutri_contens">구분:
+                        <span th:text="${nutri.category}">비타민C</span>
+                      </label>
 
-                        <label for="nutri_company">제조사:
-                          <span th:text="${nutri.company}">고려은단</span>
-                        </label>
-                      </div>
+                      <label for="nutri_company">제조사:
+                        <span th:text="${nutri.company}">고려은단</span>
+                      </label>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+          </div>
 
-            <div class="text_area grid-item2" th:each="nutri : ${nutris}">
-              <div class="raw">
-                <div class="cal">
-                  <div class="cal-v">
-                    <div class="p_img">
-                      <img src="/src/main/resources/static/img/nutri.jpg" id="product"
-                        th:onclick="'location.href=\'/nutri/about?keyword=\' + ${nutri.name}'" />
+          <div class="text_area grid-item2" th:each="nutri : ${nutris}">
+            <div class="raw">
+              <div class="cal">
+                <div class="cal-v">
+                  <div class="p_img">
+                    <img src="/src/main/resources/static/img/nutri.jpg" id="product"
+                      th:onclick="'location.href=\'/nutri/about?keyword=\' + ${nutri.name}'" />
+                  </div>
+                  <div class="p_content">
+                    <div th:text="${nutri.name}">
+                      고려은단 비타민C 1000
+                      <button class="heart-button" aria-label="Heart Button">
+                        <i class="fas fa-heart"></i>
+                      </button>
                     </div>
-                    <div class="p_content">
-                      <div th:text="${nutri.name}">
-                        고려은단 비타민C 1000
-                        <button class="heart-button" aria-label="Heart Button">
-                          <i class="fas fa-heart"></i>
-                        </button>
-                      </div>
-                      <div class="labels">
-                        <label for="nutri_contens">구분:
-                          <span th:text="${nutri.category}">비타민C</span>
-                        </label>
+                    <div class="labels">
+                      <label for="nutri_contens">구분:
+                        <span th:text="${nutri.category}">비타민C</span>
+                      </label>
 
-                        <label for="nutri_company">제조사:
-                          <span th:text="${nutri.company}">고려은단</span>
-                        </label>
-                      </div>
+                      <label for="nutri_company">제조사:
+                        <span th:text="${nutri.company}">고려은단</span>
+                      </label>
                     </div>
                   </div>
                 </div>
@@ -110,26 +93,18 @@
           </div>
         </div>
       </div>
-
-      <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false">
-        </svg>
-      </div>
     </div>
 
-    <div id="footer-placeholder"></div>
-    <script th:src="@{/js/hf.js}"></script>
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      const heartButtons = document.querySelectorAll('.heart-button');
+    <div class="col-md-5 order-md-1">
+      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+        xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false">
+      </svg>
+    </div>
+  </div>
 
-      heartButtons.forEach(function (button) {
-        button.addEventListener('click', function () {
-          this.classList.toggle('active');
-        });
-      });
-    </script>
-  </body>
+  <div id="footer-placeholder"></div>
+  <script th:src="@{/js/hf.js}"></script>
+  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 
-  <body>
+</html>
